fixes from task19